// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asset handler can remove asset documents: Nothing removed in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`asset handler can remove asset documents: doc1 with no image asset 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "name": "Scooter",
}
`;

exports[`asset handler can remove asset documents: doc2 with no image asset 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "name": "Dupe",
}
`;

exports[`asset handler can remove asset documents: doc3 with no image asset 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "name": "Tandem",
}
`;

exports[`asset handler can remove asset documents: old4 with no image asset 1`] = `
Object {
  "_id": "old4",
  "_type": "bike",
  "name": "Cool",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Nothing rewritten in assetless doc 1`] = `
Object {
  "_id": "plain",
  "_type": "bike",
  "name": "Broom",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc1 1`] = `
Object {
  "_id": "doc1",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc123-3360x840.png",
    "_type": "image",
    "caption": "Scooter bike",
    "nested": Object {
      "_sanityAsset": "image@file://./images/idx_abc123-3360x840.png",
      "_type": "image",
    },
  },
  "name": "Scooter",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc2 1`] = `
Object {
  "_id": "doc2",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc123-3360x840.png",
    "_type": "image",
  },
  "name": "Dupe",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for doc3 1`] = `
Object {
  "_id": "doc3",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/idx_abc456-310x282.jpg",
    "_type": "image",
  },
  "name": "Tandem",
}
`;

exports[`asset handler can rewrite documents / queue downloads: Rewritten asset for old4 1`] = `
Object {
  "_id": "old4",
  "_type": "bike",
  "image": Object {
    "_sanityAsset": "image@file://./images/mzFgq1cvHSEeGscxBsRFoqKG.bin",
  },
  "name": "Cool",
}
`;
